[gd_scene load_steps=14 format=2]

[ext_resource path="res://ObjectsRelated/Objects/BaseObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Assets/InteractableButton_Base_Off_Blue.png" type="Texture" id=2]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Assets/InteractableButton_Base_On_Blue.png" type="Texture" id=3]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Assets/InteractableButton_MultiUse_Blue.png" type="Texture" id=4]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Object_InteractableButton.gd" type="Script" id=5]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Assets/InteractableButton_Base_On_Green.png" type="Texture" id=6]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Assets/InteractableButton_Base_Off_Red.png" type="Texture" id=7]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Assets/InteractableButton_Base_On_Red.png" type="Texture" id=8]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Assets/InteractableButton_Base_Off_Green.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 3 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "blue_off",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "blue_on",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "green_off",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "green_on",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "red_off",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "red_on",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 4.5 )

[node name="Object_InteractableButton" instance=ExtResource( 1 )]
script = ExtResource( 5 )
tileset_01_to_register_in_toggle__path = NodePath("")
tileset_01_to_register_in_toggle__is_reversed = false
tileset_02_to_register_in_toggle__path = NodePath("")
tileset_02_to_register_in_toggle__is_reversed = false
portal_01_to_register_in_toggle__path = NodePath("")
portal_02_to_register_in_toggle__path = NodePath("")
is_pressed = false
can_be_triggered_by_players = true
can_be_triggered_by_tiles = false
button_color = 2
pressable_count = 1

[node name="ButtonContainer" type="Node2D" parent="." index="0"]
position = Vector2( 0, -16 )

[node name="Button" type="Sprite" parent="ButtonContainer" index="0"]
texture = ExtResource( 4 )

[node name="ButtonArea2D" type="Area2D" parent="ButtonContainer" index="1"]
collision_layer = 0
collision_mask = 2

[node name="ButtonCollisionShape2D" type="CollisionShape2D" parent="ButtonContainer/ButtonArea2D" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 1 )
animation = "red_on"

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="3"]
position = Vector2( 0, -12.5 )
shape = SubResource( 4 )

[node name="UseCountLabel" type="Label" parent="." index="4"]
margin_left = -14.0
margin_top = -6.0
margin_right = 16.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "1"
align = 1
valign = 1

[connection signal="body_shape_entered" from="ButtonContainer/ButtonArea2D" to="." method="_on_ButtonArea2D_body_shape_entered"]
